[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
codeanalyserbot = "codeanalyserbot.code_agent:main"

[project]
name = "codeanalyserbot"
version = "0.1.0"
description = "A code analysis tool built with LangGraph and Gemini models"
readme = "README.md"
authors = [
    {name = "z-alzayer", email = "zba21@ic.ac.uk"}
]
[project.urls]
"Homepage" = "https://github.com/z-alzayer/CodeAnalyserBot"
